--- a/package.json
+++ b/package.json
@@ -1,28 +1,53 @@
 {
-  "name": "gh-docker-logs",
-  "version": "2.0.0",
-  "description": "Collect logs from all running docker containers.",
-  "main": "main.js",
-  "dependencies": {
-    "@actions/core": "^1.2.6"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jwalton/gh-docker-logs.git"
-  },
-  "keywords": [
-    "github",
-    "actions",
-    "docker"
-  ],
-  "author": "Jason Walton",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/jwalton/gh-docker-logs/issues"
-  },
-  "homepage": "https://github.com/jwalton/gh-docker-logs#readme"
+    "name": "gh-docker-logs",
+    "version": "2.0.0",
+    "description": "Collect logs from all running docker containers.",
+    "main": "lib/main.js",
+    "dependencies": {
+        "@actions/core": "^1.2.6"
+    },
+    "devDependencies": {
+        "@semantic-release/exec": "^6.0.3",
+        "@semantic-release/git": "^10.0.1",
+        "@types/chai": "^4.3.3",
+        "@types/jest": "^29.1.2",
+        "@types/node": "^18.8.5",
+        "@typescript-eslint/eslint-plugin": "^5.40.0",
+        "@typescript-eslint/parser": "^5.40.0",
+        "@vercel/ncc": "^0.34.0",
+        "chai": "^4.3.6",
+        "eslint": "^8.25.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-jest": "^27.1.1",
+        "jest": "^29.1.2",
+        "prettier": "^2.7.1",
+        "semantic-release": "^19.0.5",
+        "ts-jest": "^29.0.3",
+        "typescript": "^4.8.4"
+    },
+    "scripts": {
+        "test": "jest",
+        "build": "tsc",
+        "clean": "rm -rf lib dist",
+        "format": "prettier --write \"**/*.ts\"",
+        "lint": "eslint src/**/*.ts",
+        "package": "ncc build --source-map --license licenses.txt",
+        "all": "npm run format && npm run clean && npm run build && npm run lint && npm run package && npm test",
+        "semantic-release": "semantic-release"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/jwalton/gh-docker-logs.git"
+    },
+    "keywords": [
+        "github",
+        "actions",
+        "docker"
+    ],
+    "author": "Jason Walton",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/jwalton/gh-docker-logs/issues"
+    },
+    "homepage": "https://github.com/jwalton/gh-docker-logs#readme"
 }
