--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
         "@semantic-release/git": "^10.0.1",
         "@types/chai": "^4.3.3",
         "@types/jest": "^29.1.2",
-        "@types/node": "^18.8.5",
-        "@typescript-eslint/eslint-plugin": "^5.40.0",
-        "@typescript-eslint/parser": "^5.40.0",
-        "@vercel/ncc": "^0.34.0",
+        "@types/node": "^20.11.7",
+        "@typescript-eslint/eslint-plugin": "^6.19.1",
+        "@typescript-eslint/parser": "^6.19.1",
+        "@vercel/ncc": "^0.38.1",
         "chai": "^4.3.6",
         "eslint": "^8.25.0",
-        "eslint-config-prettier": "^8.5.0",
+        "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-jest": "^27.1.1",
         "jest": "^29.2.0",
-        "prettier": "^2.7.1",
-        "semantic-release": "^19.0.5",
+        "prettier": "^3.2.4",
+        "semantic-release": "^23.0.0",
         "ts-jest": "^29.0.3",
-        "typescript": "^4.8.4"
+        "typescript": "^5.3.3"
     },
     "scripts": {
         "test": "jest",
@@ -49,5 +49,8 @@
     "bugs": {
         "url": "https://github.com/jwalton/gh-docker-logs/issues"
     },
-    "homepage": "https://github.com/jwalton/gh-docker-logs#readme"
+    "homepage": "https://github.com/jwalton/gh-docker-logs#readme",
+    "volta": {
+        "node": "20.11.0"
+    }
 }
